Only use JDK11 and upgrade all parsers to latest stable version
Also removed Decs parser because it is not available on MavenCentral,
fixed compile issues caused by upgrades, and slightly improve Jackson,
Apache Commons, and OpenCSV code (which are the 3 candidates I'm
choosing from).